<resources>
    <string name="app_name">Majstor</string>
    <string name="app_label">Pronadji majstora</string>
    <string name="navigation_drawer_open">Pregled dodatnih opcija</string>
    <string name="navigation_drawer_close">Zatvori dodatne opcije</string>
    <string name="ok">OK</string>
    <string name="yes">Da</string>
    <string name="no">Ne</string>
    <string name="back">Nazad</string>
    <string name="change">Izmeni</string>
    <string name="register_button_text">Registracija</string>
    <string name="login_button_text">Prijava</string>
    <string name="guest_button_text">Nastavi kao gost</string>
    <string name="first_name_label">Ime:</string>
    <string name="last_name_label">Prezime:</string>
    <string name="address_label">Adresa:</string>
    <string name="phone_number_label">Telefon:</string>
    <string name="username_label">Korisnicko ime:</string>
    <string name="password_label">Lozinka:</string>
    <string name="new_password_label">Nova lozinka:</string>
    <string name="first_name_hint">unesite ime</string>
    <string name="last_name_hint">unesite prezime</string>
    <string name="address_hint">unesite adresu</string>
    <string name="phone_number_hint">unesite broj telefona</string>
    <string name="price_hint">unesite cenu u dinarima</string>
    <string name="special_technique_hint">unesite specijalne tehnike</string>
    <string name="username_hint">unesite korisnicko ime</string>
    <string name="password_hint">unesite lozinku</string>
    <string name="old_password_hint">unesite staru lozinku</string>
    <string name="new_password_hint">unesite novu lozinku</string>
    <string name="remember_user_label">Ostani prijavljen</string>
    <string name="dialog_loading_title">Sacekajte</string>
    <string name="wait_for_login">Prijava je u toku…</string>
    <string name="wait_for_register">Registracija je u toku…</string>
    <string name="wait_for_edit_user_data">Izmena licnih podataka je u toku…</string>
    <string name="wait_for_search">Pretraga zahteva je u toku…</string>
    <string name="wait_for_get_requests">Dohvatanje zahteva je u toku…</string>ng>
    <string name="wait_for_realize_request">Realizacija zahteva je u toku…</string>
    <string name="wait_for_invalidate_request">Ponistavanje zahteva je u toku…</string>
    <string name="login_error_message">Doslo je do greske prilikom prijave. Pokusajte ponovo.</string>
    <string name="registration_error_message">Doslo je do greske prilikom registracije. Pokusajte ponovo.</string>
    <string name="edit_user_data_error_message">Doslo je do greske prilikom izmene licnih podataka. Pokusajte ponovo.</string>
    <string name="search_error_message">Doslo je do greske prilikom pretrage. Pokusajte ponovo.</string>
    <string name="realize_request_error_message">Doslo je do greske prilikom realizacije zahteva. Pokusajte ponovo.</string>
    <string name="invalidate_request_error_message">Doslo je do greske prilikom ponistavanja zahteva. Pokusajte ponovo.</string>
    <string name="get_requests_error_message">Doslo je do greske prilikom dohvatanja zahteva. Pokusajte ponovo.</string>
    <string name="registration_succ_title">Registracija</string>
    <string name="registration_succ_message">Registracija je uspesna!</string>
    <string name="edit_user_data_succ_title">Izmena podataka</string>
    <string name="edit_user_data_succ_message">Uspesno ste izmenili podatke!</string>
    <string name="edit_password_succ_title">Promena lozinke</string>
    <string name="edit_password_succ_message">Uspesno ste promenili lozinku!</string>
    <string name="job_label">Posao:</string>
    <string name="price_label">Cena:</string>
    <string name="currency_label">din</string>
    <string name="date_begin_label">Datum pocetka:</string>
    <string name="special_technique_label2">Specijalne tehnike:</string>
    <string name="urgency_label">Hitnost</string>
    <string name="urgency_label2">Hitnost:</string>
    <string name="search_label">Pretraga</string>
    <string name="navigation_view_register">Registruj se</string>
    <string name="navigation_view_sign_in">Prijavi se</string>
    <string name="navigation_view_change_user_data">Izmeni licne podatke</string>
    <string name="navigation_view_change_password">Promeni lozinku</string>
    <string name="navigation_view_sign_out">Odjavi se</string>
    <string name="logout_dialog_title">Odjavi se</string>
    <string name="logout_dialog_messsage">Da li ste sigurni da zelite da se odjavite?</string>
    <string name="change_password_error_message_1">Morate popuniti sva polja!</string>
    <string name="change_password_error_message_2">Nove lozinke se ne poklapaju!</string>
    <string name="change_password_error_message_3">Doslo je do greske prilikom promene lozinke. Pokusajte ponovo.</string>
    <string name="search_result_title">Rezultati pretrage:</string>
    <string name="active_requests_empty_title">Ne postoje aktivni zahtevi!</string>
    <string name="date_begin_active_request_item">Datum pocetka: %1$s</string>
    <string name="working_period">Period radova:</string>
    <string name="active_requests_title">Rezultati pretrage:</string>
    <string name="distance_label">Udaljenost:</string>
    <string name="meter_label">m</string>
    <string name="realize">Realizuj</string>
    <string name="invalidate">Ponisti</string>
    <string name="title_activity_maps">Map</string>
    <string name="finish_request_not_possible_message">Nije moguce zavrsiti zahtev pre kraja radova.</string>
    <string name="realize_dialog_title">Realizacija zahteva</string>
    <string name="realize_dialog_messsage">Da li ste sigurni da zelite da realizujete zahtev?</string>
    <string name="realize_successful_title">Realizacija zahteva</string>
    <string name="realize_successful_message">Realizacija zahteva je uspesno obavljena.</string>
    <string name="invalidate_dialog_title">Ponistavanje zahteva</string>
    <string name="invalidate_dialog_messsage">Da li ste sigurni da zelite da ponistite zahtev?</string>
    <string name="invalidate_successful_title">Ponistavanje zahteva</string>
    <string name="invalidate_successful_message">Ponistavanje zahteva je uspesno obavljeno.</string>
</resources>
