<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/menu_user_info"
        android:checkableBehavior="none">
        <item
            android:id="@+id/change_user_info"
            android:icon="@drawable/ic_account_black_24dp"
            android:checked="false"
            android:title="@string/navigation_view_change_user_data" />
        <item
            android:id="@+id/change_password"
            android:icon="@drawable/ic_account_key_black_24dp"
            android:checked="false"
            android:title="@string/navigation_view_change_password" />
        <item
            android:id="@+id/logout"
            android:icon="@drawable/ic_logout_black_24dp"
            android:checked="false"
            android:title="@string/navigation_view_sign_out" />
    </group>

</menu>
